src/test/deca/syntax/invalid/improvided/bloc_not_closed.deca
// Description :
// 	Bloc not closed
// Resultats :
//	Ligne 10 :  
{
	int x;
	float y;
	print("hello");

